--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TaberAktivitet"></activity>
+        <activity android:name=".HighscoreAktivitet"></activity>
+        <activity android:name=".TaberAktivitet" />
         <activity android:name=".VinderAktivitet" />
         <activity android:name=".MainActivity">
             <intent-filter>
